--- a/git/lading-page/componentes/styles/main.css
+++ b/git/lading-page/componentes/styles/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
 
-body{
+body {
     background-color: rgb(34, 34, 34);
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -8,6 +8,7 @@ body{
     margin: 0 auto;
     padding: 15px;
 }
+
 header{
     display: flex;
     flex-direction: row;
@@ -86,4 +87,18 @@ input{
     border: none;
     font-size: 15px;
 
+}
+footer{
+    background-color: rgb(61, 60, 61);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    color: #ecf0f1;
+    padding: 24px 0;
+    width: 100%;
+}
+footer p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
